--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -21,7 +21,7 @@ body{
     align-items: center;
 }
 .box{
-    min-width:30rem ;
+    max-width:30rem ;
     /* min-height: 30rem; */
     background-color:rgb(232, 203, 203);
     border-radius: 20px;
@@ -67,4 +67,26 @@ input + label{
 .endPage{
     margin-top: 10px;
     color: rgb(100, 100, 100);
+}
+
+/* ============>  For mobile <============= */
+
+@media screen and  (max-width:580px) {
+    body{
+        background-color: red;
+    }
+    .box{
+        width: 90% !important;
+        padding: 10px;
+    }
+    .box h3{
+        font-size: 1rem;
+    }
+    input + label{
+        font-size: 1rem;
+    }
+    .btn{
+        font-size: 0.8rem;
+        padding: 10px 10px;
+    }
 }
